2002-05-28  Richard Williamson  <rjw@apple.com>

    Fixed reporting of malformed resources URLs.  This fixed
    exceptions that were being thrown because nil handles were
    being added to datasource handle array.

	* kwq/KWQKjobclasses.mm:
	* kwq/KWQKloader.mm:
	(Loader::servePendingRequests):

2002-05-28  Chris Blumenberg  <cblu@apple.com>

	Added framework-header-stamp

	* .cvsignore:

2002-05-27  John Sullivan  <sullivan@apple.com>

	* Resources/linkCursor.tiff: Added. Maciej forgot to cvs add
	this new file. I stole the one from haircut.

2002-05-27  Maciej Stachowiak  <mjs@apple.com>

	Fixed the vexing and long-standing:

	Radar 2894699 - Crash at: http://cb.apple.com/jsplugins.html
	
	* khtml/ecma/kjs_navigator.cpp: This crash was caused by Plugin
	and MimeType objects referring to data that was held and
	refcounted by PluginBase, without holding a ref. I fixed it by
	making these individual items participate in the refcounting as
	well.

2002-05-26  Maciej Stachowiak  <mjs@apple.com>

	Webcore part of fix for:

	Radar 2884085 - add support for changing cursor over links

	* Makefile.am: Install tiff of link cursor.
	* kwq/qt/qcursor.h, kwq/KWQCursor.mm:
	(QCursor::QCursor): Change QCursor to contain an NSCursor.
	(QCursor::~QCursor): Likewise.
	(QCursor::operator=): Likewise.
	(QCursor::handle): Likewise.
	* kwq/KWQKCursor.mm:
	(+[NSCursor _WebCore_linkCursor]): NSCursor extension method that
	provides the link cursor.	
	(KCursor::handCursor): Use the link cursor instead of the default
	arrow cursor.
	* kwq/KWQKHTMLSettings.mm:
	(KHTMLSettings::changeCursor): Return TRUE; we always want cursor
	tracking.
	* kwq/KWQView.h, kwq/KWQView.mm:
	(-[KWQHTMLView setCursor:]): Remember the new cursor and
	invalidate cursor rects.
	(-[KWQHTMLView resetCursorRects]): Establish cursor rect for
	currently set cursor, if not default.
	* kwq/KWQWidget.mm:
	(QWidget::setCursor): Call setCursor: on the underlying
	NSView, if implemented.
	(QWidget::cursor): Implemented.